turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:47: error: type mismatch;
 found   : String("LRLLLR")
 required: Array[Array[Array[Int]]]
  rule= ("LRLLLR")
         ^